[package]
name = "rusty-kyber"
version = "0.1.0"
authors = ["Justin Hutzler <justin@synergy-network.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure Rust, no_std, production-ready implementation of Kyber (ML-KEM, FIPS 203) for post-quantum secure key encapsulation."
repository = "https://github.com/hootzluh/rusty-kyber"
keywords = ["post-quantum", "kyber", "pqcrypto", "kem", "cryptography", "rust"]
categories = ["cryptography", "algorithms", "no-std"]

[lib]
crate-type = ["lib"]

[features]
default = ["std", "kyber512"]
std = []
kyber512 = []
kyber768 = []
kyber1024 = []
serde = ["dep:serde"]

[dependencies]
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.6", features = ["derive"], default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
sha3 = { version = "0.10.8", default-features = false }
paste = "1.0"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
proptest = "1.4"
rand = "0.8"
rand_chacha = "0.3"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[package.metadata.docs.rs]
features = ["std", "serde"]
